--- a/.travis.yml
+++ b/.travis.yml
@@ -18,15 +18,15 @@ script:
     # Make sure the Docker services are running in your local machine
   # Run this command from the directory where you have the "docker-compose-build.yaml" file present
   - docker-compose -f docker-compose-build.yaml build --parallel
-  - docker tag udagram-frontend wkijedi/udagram-frontend:latest
-  - docker tag udagram-reverseproxy wkijedi/udagram-reverseproxy:latest
-  - docker tag udagram-api-feed wkijedi/udagram-api-feed:latest
-  - docker tag udagram-api-user wkijedi/udagram-api-user:latest
+  # - docker tag udagram-frontend wkijedi/udagram-frontend:latest
+  # - docker tag udagram-reverseproxy wkijedi/udagram-reverseproxy:latest
+  # - docker tag udagram-api-feed wkijedi/udagram-api-feed:latest
+  # - docker tag udagram-api-user wkijedi/udagram-api-user:latest
 
 
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker push wkijedi/udagram-frontend:latest
-  - docker push wkijedi/udagram-reverseproxy:latest
+  - docker push wkijedi/udagram-frontend:local
+  - docker push wkijedi/reverseproxy:latest
   - docker push wkijedi/udagram-api-feed:latest
   - docker push wkijedi/udagram-api-user:latest
