--- a/.travis.yml
+++ b/.travis.yml
@@ -18,11 +18,11 @@ script:
     # Make sure the Docker services are running in your local machine
   # Run this command from the directory where you have the "docker-compose-build.yaml" file present
   - docker-compose -f docker-compose-build.yaml build --parallel
-  
+
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker tag udagram-frontend wkijedi/udagram-frontend
-  - docker tag reverseproxy wkijedi/udagram-reverseproxy
+  - docker tag reverseproxy wkijedi/reverseproxy
   - docker tag udagram-api-feed wkijedi/udagram-api-feed
   - docker tag udagram-api-user wkijedi/udagram-api-user
   - docker-compose -f docker-compose-build.yaml push
