--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-  - 13
+  - 16
 
 services:
   - docker
@@ -16,13 +16,18 @@ before_script:
 script:
   - docker --version # print the version for logging
     # Make sure the Docker services are running in your local machine
+
   # Run this command from the directory where you have the "docker-compose-build.yaml" file present
   - docker-compose -f docker-compose-build.yaml build --parallel
+  - docker tag udagram-frontend wkijedi/udagram-frontend:v2
+  - docker tag reverseproxy wkijedi/reverseproxy:v2
+  - docker tag udagram-api-feed wkijedi/udagram-api-feed:v2
+  - docker tag udagram-api-user wkijedi/udagram-api-user:v2
+
 
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker tag udagram-frontend wkijedi/udagram-frontend
-  - docker tag reverseproxy wkijedi/reverseproxy
-  - docker tag udagram-api-feed wkijedi/udagram-api-feed
-  - docker tag udagram-api-user wkijedi/udagram-api-user
-  - docker-compose -f docker-compose-build.yaml push
+  - docker push wkijedi/udagram-frontend:v2
+  - docker push wkijedi/everseproxy:v2
+  - docker push wkijedi/udagram-api-feed:v2
+  - docker push wkijedi/udagram-api-user:v2
