--- a/.travis.yml
+++ b/.travis.yml
@@ -28,6 +28,6 @@ script:
 after_success:
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - docker push wkijedi/udagram-frontend:v2
-  - docker push wkijedi/everseproxy:v2
+  - docker push wkijedi/reverseproxy:v2
   - docker push wkijedi/udagram-api-feed:v2
   - docker push wkijedi/udagram-api-user:v2
