--- a/backend-feed-deployment.yaml
+++ b/backend-feed-deployment.yaml
@@ -15,7 +15,7 @@ spec:
         app: backend-feed
     spec:
       containers:
-      - image: wkijedi/udagram-api-feed
+      - image: wkijedi/udagram-api-feed:v2
         name: backend-feed
         imagePullPolicy: Always  
         resources:
