--- a/frontend-deployment.yaml
+++ b/frontend-deployment.yaml
@@ -16,7 +16,7 @@ spec:
         api: external        
     spec:
       containers:
-      - image: wkijedi/udagram-frontend
+      - image: wkijedi/udagram-frontend:v2
         name: frontend
         imagePullPolicy: Always          
         ports:
