--- a/reverseproxy-deployment.yaml
+++ b/reverseproxy-deployment.yaml
@@ -15,7 +15,7 @@ spec:
         app: reverseproxy
     spec:
       containers:
-      - image: wkijedi/reverseproxy
+      - image: wkijedi/reverseproxy:v2
         name: reverseproxy
         imagePullPolicy: Always          
         resources:
