--- a/backend-feed-deployment.yaml
+++ b/backend-feed-deployment.yaml
@@ -15,16 +15,16 @@ spec:
         app: backend-feed
     spec:
       containers:
-      - image: wkijedi/udagram-api-feed
+      - image: wkijedi/udagram-api-feed:v2
         name: backend-feed
-        imagePullPolicy: Always  
+        imagePullPolicy: Always
         resources:
           requests:
-            memory: "250Mi"
-            cpu: "500m"
+            memory: "64Mi"
+            cpu: "250m"
           limits:
-            memory: "250Mi"
-            cpu: "500m"                  
+            memory: "1024Mi"
+            cpu: "500m"                 
         env:
         - name: URL
           valueFrom:
