--- a/env-secret.yaml
+++ b/env-secret.yaml
@@ -4,5 +4,5 @@ metadata:
   name: env-secret
 type: Opaque
 data:
-  POSTGRESS_USERNAME: d2tpamVkaQo=
-  POSTGRESS_PASSWORD: V2VzbGVpZ2gjMQo=
+  POSTGRES_USERNAME: cG9zdGdyZXMK
+  POSTGRES_PASSWORD: Wesleigh#1
