Changed host of frontend

--- a/env-secret.yaml
+++ b/env-secret.yaml
@@ -5,4 +5,4 @@ metadata:
 type: Opaque
 data:
   POSTGRES_USERNAME: cG9zdGdyZXMK
-  POSTGRES_PASSWORD: V2VzbGVpZ=
+  POSTGRES_PASSWORD: V2VzbGVpZ2gjMQo=
