--- a/env-configmap.yaml
+++ b/env-configmap.yaml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: ConfigMap
 data:
-  AWS_BUCKET: arn:aws:s3:::udagram-1984131-dev
+  AWS_BUCKET: arn:aws:s3:::udagram-370849164177-devInf
   AWS_PROFILE: default
   AWS_REGION: us-west-1
   JWT_SECRET: wesley
   POSTGRES_DB: postgres
   POSTGRES_USERNAME: postgres
   POSTGRES_PASSWORD: Wesleigh#1
-  POSTGRES_HOST: cdr.cnsclzjgaph5.us-east-1.rds.amazonaws.com
+  POSTGRES_HOST: udagram.cp5xlwc1rg1b.us-west-1.rds.amazonaws.com
   URL: http://localhost:8100  
 metadata:
   name: env-config
