--- a/backend-feed-service.yaml
+++ b/backend-feed-service.yaml
@@ -1,13 +1,13 @@
 apiVersion: v1
 kind: Service
 metadata:
-  labels:
-    service: backend-feed
   name: backend-feed
+  labels:
+    app: backend-feed
 spec:
-  ports:
-  - name: "8080"
-    port: 8080
-    targetPort: 8080
   selector:
-    service: backend-feed
+    app: backend-feed
+  ports:
+    - protocol: TCP
+      port: 8080
+      targetPort: 8080
